--- a/.env-dist
+++ b/.env-dist
@@ -6,6 +6,10 @@
 #
 
 ######################################################
+# Memory caping for containers : 5Gio = 5368709120 bytes
+MEM_LIMIT=5g
+
+######################################################
 # Paramétrage du conteneur ontologie-rda-fr
 ######################################################
 ONTOLOGIE_RDA_FR_HTTP_PORT=13080
