Lower mem_limit

--- a/.env-dist
+++ b/.env-dist
@@ -6,8 +6,8 @@
 #
 
 ######################################################
-# Memory caping for containers : 5Gio = 5368709120 bytes
-MEM_LIMIT=5g
+# Memory caping for containers : 3Gio
+MEM_LIMIT=3g
 
 ######################################################
 # Paramétrage du conteneur ontologie-rda-fr
