add caping for memswap_limit and cpus

--- a/.env-dist
+++ b/.env-dist
@@ -6,8 +6,9 @@
 #
 
 ######################################################
-# Memory caping for containers : 3Gio
+# Caping for containers
 MEM_LIMIT=3g
+CPU_LIMIT=0.5
 
 ######################################################
 # Paramétrage du conteneur ontologie-rda-fr
