--- a/.env-dist
+++ b/.env-dist
@@ -30,4 +30,6 @@ ONTOLOGIE_RDA_FR_VERSION=develop
 ONTOLOGIE_RDA_FR_WATCHTOWER_NOTIFICATION_SLACK_HOOK_URL=https://hooks.slack.com/services/xxx/yyyyyyyyyyyyyyy
 ONTOLOGIE_RDA_FR_WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER=local ontologie-rda-fr-watchtower
 ONTOLOGIE_RDA_FR_WATCHTOWER_RUN_ONCE=true
+ONTOLOGIE_RDA_FR_WATCHTOWER_DOCKERHUB_USER=
+ONTOLOGIE_RDA_FR_WATCHTOWER_DOCKERHUB_PASS=
 
