--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,9 @@ services:
       WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER: ${ONTOLOGIE_RDA_FR_WATCHTOWER_NOTIFICATION_SLACK_IDENTIFIER}
       WATCHTOWER_NOTIFICATION_SLACK_CHANNEL: "#notifs-github"
       WATCHTOWER_SCOPE: "ontologie-rda-fr-watchtower-scope"
+      # https://github.com/containrrr/watchtower/issues/1599
+      REPO_USER: ${ONTOLOGIE_RDA_FR_WATCHTOWER_DOCKERHUB_USER}
+      REPO_PASS: ${ONTOLOGIE_RDA_FR_WATCHTOWER_DOCKERHUB_PASS}
     labels:
       - "com.centurylinklabs.watchtower.scope=ontologie-rda-fr-watchtower-scope"
 
